# DodoDB

./: Cargo.toml  LICENSE  README.md  build.rs  config.json  snapshot.json  subscriptions.json
src/: app.rs  config.rs  errors.rs  main.rs  persistence.rs
src/routes/: kv_routes.rs  mod.rs  pubsub_routes.rs  system_routes.rs
src/services/: kv_service.rs  mod.rs  pubsub_service.rs
src/state/: app.rs  kv.rs  mod.rs  persistence.rs
