[package]
name = "dodo-db"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tower-http = { version = "0.5", features = ["trace"] }
http = "1.3.1"

reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
once_cell = "1.19"
chrono = "0.4.42"
lazy_static = "1.5.0"
